--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MYSQL_DATABASE=Test_db
 MYSQL_ROOT_PASSWORD=1234admin
 MYSQL_HOST=localhost
 MYSQL_TCP_PORT=3306
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
