--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     env_file: .env
     ports:
       - 3306:3306
-  
-  adminer:
-    image: adminer
-    restart: always
+
+  redis:
+    image: redis:alpine
+    env_file: .env
     ports:
-      - 8080:8080
+      - '6379:6379'
