--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pyflakes==2.1.1
 PyMySQL==0.9.2
 pyTelegramBotAPI==3.6.7
 pytz==2019.3
+redis==3.5.0
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
